[project]
name = "incident-response-env"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
